add logic for upload xml
