# api.swagger.json
@@ -75,6 +75,28 @@
         ]
       }
     },
+    "/categories": {
+      "get": {
+        "operationId": "GetAllCategories",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1Categories"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "PimService"
+        ]
+      }
+    },
     "/echo": {
       "get": {
         "operationId": "Echo",
@@ -172,6 +194,35 @@
         },
         "meta": {
           "$ref": "#/definitions/v1ScrollDescriptor"
+        }
+      }
+    },
+    "v1Categories": {
+      "type": "object",
+      "properties": {
+        "categories": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Category"
+          }
+        }
+      }
+    },
+    "v1Category": {
+      "type": "object",
+      "properties": {
+        "ID": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "children": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Category"
+          }
         }
       }
     },
